<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f1f"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mm"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/h"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/normal"
        android:layout_below="@+id/normal"
        android:background="#ffffff"
        android:text="@string/h"
        android:textSize="50sp" />

    <Button
        android:id="@+id/normal"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/e"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:text="@string/n"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mm"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="80sp" />

    <Button
        android:id="@+id/e"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/normal"
        android:layout_below="@+id/head"
        android:background="#ffffff"
        android:text="@string/e"
        android:textSize="50sp" />

</RelativeLayout>
