<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f1f"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Easy" >

    <TextView
        android:id="@+id/easy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/infoh"
        android:textColor="#ffffff"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/in"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/easy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bc"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/in"
        android:layout_below="@+id/in"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/bc"
        android:textSize="50sp" />

</RelativeLayout>
